# pdfdir

./: .gitignore  justfile  pyproject.toml  run_gui.py
src/: convert.py  pdbm_loader.py
src/gui/: main.py  main_ui.py
src/pdf/: pdf.py
